# ZPix

./: .gitignore  CMakeLists.txt  README.md  app.py  build.ps1  clean.cmd  main.cpp  start.ps1  vcpkg.json
assets/kerismaker/: EDIT_NOTE.txt
docs/: FAQ.md
examples/: prompts.json
include/: console.hpp  free_port.hpp  metadata.hpp  processes.hpp  starter.hpp  watcher.hpp  webview.hpp
metadata/: DESCRIPTION  DONATE_URL  HOME_URL  NAME  SAFE_NAME
resources/: resources.cmake  version.rc.in
source/: app.css  app.js
source/cpp/: console.cpp  free_port.cpp  metadata.cpp  processes.cpp  starter.cpp  watcher.cpp  webview.cpp
source/ps/: app_invoking.ps1  gpu_detection.ps1  package_utils.ps1  venv_creation.ps1
source/py/: lora_model.py
translations/: fr-FR.json
